<resources>
    <string name="app_name">ManageProduct</string>
    <string name="NameES">Nombre</string>
    <string name="DescripES">Descripcion</string>
    <string name="DosageES">Dosis</string>
    <string name="BrandES">Marca</string>
    <string name="PriceES">Precio</string>
    <string name="Stock">Stock</string>
    <string name="Image">Imagen</string>
    <string name="TitleES">Añadir un producto</string>
    <string name="btnSaveES">Guardar</string>
    <string name="searchES">Buscar</string>
    <string name="AddProduct">Nuevo Producto</string>
    <string name="SpinnerES">Selecciona uno</string>

    <string-array name="listUnit">
        <item>mg</item>
        <item>g</item>
        <item>ml</item>
    </string-array>

    <string name="loginOk">Autentificación correcta</string>
    <string name="passCase">La clave debe de contener al menos una letra mayuscula</string>
    <string name="passDigit">La clave debe de contener al menos un numero</string>
    <string name="passMinLength">La clave debe de contener al menos 8 caracteres</string>
    <string name="dataEmpty">El campo está vacio</string>
    <string name="cbText">Recordar</string>
    <string name="btnLogin">Iniciar Sesion</string>
    <string name="hintUser">Usuario</string>
    <string name="hintPass">Contraseña</string>
    <string name="forgetUser">Registrarse</string>
    <string name="conditions">Acepto las condiciones</string>
    <string name="ok">OK</string>
    <!-- % seguido de un numero es el argumento y el $ indica el tipo 's' es de tipo String
    es un patron de contruccion
    -->
    <string name="message_city">Ha seleccionado %1$s (%2$s)</string>

</resources>