<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_product_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.julian.manageproduct.ManageProduct_Activity">

    <TextView
        android:text="@string/TitleES"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvTitulo" />


    <ImageView
        android:id="@+id/imgVImage"
        android:src="@drawable/pill"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:clickable="true"
        android:onClick="clickImg"
        android:layout_below="@+id/txvTitulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NameES"
        android:layout_alignTop="@id/imgVImage"
        android:layout_toRightOf="@+id/imgVImage" />

    <EditText
        android:id="@+id/edtDescrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/DescripES"
        android:maxLines="3"
        android:maxHeight="15dp"
        android:maxLength="150"
        android:layout_below="@+id/imgVImage" />

    <EditText
        android:id="@+id/edtStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Stock"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/edtPrice"
        android:layout_alignBottom="@+id/edtPrice"
        android:layout_alignLeft="@+id/edtDescrip"
        android:layout_alignStart="@+id/edtDescrip"
        android:layout_toLeftOf="@+id/spnUnitDosage"
        android:layout_toStartOf="@+id/spnUnitDosage" />

    <EditText
        android:id="@+id/edtDosage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/DosageES"
        android:inputType="number"
        android:layout_below="@+id/edtDescrip"
        android:layout_toRightOf="@+id/edtPrice"
        android:layout_toLeftOf="@+id/spnUnitDosage"
        android:layout_toStartOf="@+id/spnUnitDosage" />

    <EditText
        android:id="@+id/edtBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/BrandES"
        android:layout_below="@+id/edtStock"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/edtPrice"
        android:layout_toStartOf="@+id/edtPrice" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnUnitDosage"
        android:layout_alignBottom="@+id/edtDosage"
        android:layout_toRightOf="@+id/txvTitulo"
        android:layout_toEndOf="@+id/txvTitulo" />

    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PriceES"
        android:layout_below="@+id/spnUnitDosage"
        android:layout_alignLeft="@+id/spnUnitDosage"
        android:layout_alignStart="@+id/spnUnitDosage"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/edtBrand"
        android:gravity="center_horizontal"
        >
        <include layout="@layout/btn_ok"/>

    </LinearLayout>
<!--
    <Button
        android:text="@string/btnSaveES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:onClick="clickbtn"
        android:layout_below="@+id/edtBrand"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />
-->

</RelativeLayout>