<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/PriceES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvPriceCA"
        android:layout_marginLeft="10dp"
        android:layout_alignBaseline="@+id/txvStockCA"
        android:layout_alignBottom="@+id/txvStockCA"
        android:layout_toRightOf="@+id/txvStockCA"
        android:layout_toEndOf="@+id/txvStockCA" />

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:id="@+id/imgProd"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/viwLinea"
        android:background="@color/colorLinea"
        android:layout_below="@id/imgProd"/>

    <TextView
        android:text="@string/NameES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvNameCA"
        android:layout_marginTop="12dp"
        android:layout_alignTop="@+id/imgProd"
        android:layout_alignLeft="@+id/txvStockCA"
        android:layout_alignStart="@+id/txvStockCA" />

    <TextView
        android:text="@string/Stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvStockCA"
        android:layout_marginLeft="11dp"
        android:layout_below="@+id/txvNameCA"
        android:layout_toRightOf="@+id/imgProd"
        android:layout_toEndOf="@+id/imgProd"
        android:layout_marginStart="11dp"
        android:layout_marginTop="14dp" />
</RelativeLayout>